# githubactions2

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  example.rst  index.rst
modeltools/: preprocessing.py
test/: test_preprocessing.py
